Tests now run in parallel
This is safe, as power policy is not set and multiple instances of DEmOS are now supported

--- a/test/meson.build
+++ b/test/meson.build
@@ -6,5 +6,5 @@ tests = '''
 '''.split()
 
 foreach t: tests
-	test(t, find_program(t), protocol: 'tap', workdir: meson.current_source_dir(), is_parallel: false)
+	test(t, find_program(t), protocol: 'tap', workdir: meson.current_source_dir(), is_parallel: true)
 endforeach
